[gd_scene load_steps=7 format=3 uid="uid://dkmbv1qlcrwi1"]

[ext_resource type="Script" path="res://effects/bullet_upgrade.gd" id="1_3wab4"]
[ext_resource type="Texture2D" uid="uid://bu7l6w606qapv" path="res://assets/laser.png" id="2_02lcq"]
[ext_resource type="PackedScene" uid="uid://de5rll1g1mwec" path="res://effects/explosion.tscn" id="3_61t1t"]
[ext_resource type="Script" path="res://effects/explosion.gd" id="4_1t2t6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_58ihn"]
blend_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cjuiu"]

[node name="Bullet" type="Area2D"]
collision_mask = 5
script = ExtResource("1_3wab4")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_58ihn")
texture = ExtResource("2_02lcq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_cjuiu")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Explosion" parent="." instance=ExtResource("3_61t1t")]
script = ExtResource("4_1t2t6")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 15
speed_scale = 1.3
explosiveness = 0.2
randomness = 0.75
emission_shape = 2
emission_sphere_radius = 1.0
spread = 107.25
gravity = Vector2(-500, -100)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
